crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__assign_stmt_recovery_9.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"a ++= 1\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [],
    comments: [],
}
